@@ -1,11 +1,14 @@
 Title: Make icons selectable in view editor
 Component: multisite
-State: open
+Class: nastiness
+State: done
 Date: 2012-09-19 12:56:10
 Targetversion: 1.4.0
-Class: nastiness
 
 At the moment there is only a select field without any description what to put into it.
 A dropdownfield of the available icons would be much better.
 
 Maybe we put a ValueSpec IconSelector (see rule editor) into a foldable area...
+
+2013-12-18 13:37:25: changed state open -> done
+Create a valuespec called IconSelector() and added this to the view editor.
