@@ -63,6 +63,7 @@
 
     Multisite:
     * 0371 Added log class filter to hostsvcevents view
+    * 0390 Added an icon selector to the view editor...
     * 0302 FIX: Fixed highlight of choosen elements in foldertee/views snapin in Chrome/IE
     * 0239 FIX: Fixed incorrect html formatting when displaying host or service comments...
     * 0307 FIX: Increased performance of multisite GUI with a large userbase...
